# cnn_cuda_impl

./: .gitignore  CMakeLists.txt  README.md  dataloader.cpp  main.cpp  main.cu  model.cpp  model.h  plot_loss_graph.py
MNIST_Dataset/: download.sh  read_images  read_mnist_data.cpp
include/cnn_library/dataloader/: dataloader.h
include/cnn_library/layers/: base_layer.h  convolution.h  cross_entropy_loss.h  linear.h  loss.h  mse_loss.h  relu.h  softmax.h
include/cnn_library/nn/: sequential.h
layers/: activation.cu  base_layer.cu  layer_base.cuh  linear.cu  sequential.cu
report/: main.tex  references.bib
report/sections/: architecture.tex  conclusion.tex  introduction.tex  linear.tex  loss.tex  relu.tex  results.tex  softmax.tex  training.tex
src/dataloader/: dataloader.cpp  test
src/layers/: base_layer.cu  convolution.cu  cross_entropy_loss.cpp  cross_entropy_loss.cu  layer_base.cuh  linear.cpp  linear.cu  mse_loss.cu  relu.cpp  relu.cu  softmax.cpp  softmax.cu
src/nn/: sequential.cpp  sequential.h
test/: export_torch_model.py  model_weights.txt  sequential  test.sh  test_ANN.py  test_linear.cu  test_linear.sh  test_linear1.cu  test_loss.cu  test_loss.sh  test_relu.cu  test_sequential.cpp  test_sequential.cu  test_softmax.cu  test_softmax.sh
